# samvad

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: fast-wishper.py  getting_started.py  scratchpad.py
src/samvad/: __init__.py
src/samvad/cli/: data.py  main.py
src/samvad/ui/: loading_bar.py
src/samvad/utils/: data.py  path.py  stream.py
